--- a/package.json
+++ b/package.json
@@ -6,5 +6,11 @@
     "type": "git",
     "url": "git+https://github.com/davidjgoss/davidjgoss.github.io.git"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@11ty/eleventy": "^0.11.1"
+  },
+  "scripts":{
+    "build": "eleventy"
+  }
 }
