--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@11ty/eleventy": "^0.11.1"
   },
   "scripts":{
-    "build": "eleventy"
+    "build": "eleventy",
+    "start": "eleventy --serve"
   }
 }
