--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.1"
+    "@11ty/eleventy": "^0.11.1",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4"
   },
   "scripts": {
     "build": "eleventy",
