--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
     "@11ty/eleventy-plugin-rss": "^1.0.9",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4"
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
+    "markdown-it-footnote": "^3.0.2"
   },
   "scripts": {
     "build": "eleventy",
