--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@11ty/eleventy": "^0.11.1",
     "@11ty/eleventy-plugin-rss": "^1.0.9",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
+    "clean-css": "^4.2.3",
     "markdown-it-footnote": "^3.0.2",
     "modern-reset": "^0.1.0"
   },
