--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
     "clean-css": "^4.2.3",
     "markdown-it-footnote": "^3.0.2",
+    "markdown-it-implicit-figures": "^0.10.0",
     "modern-reset": "^0.1.0"
   },
   "scripts": {
